add checkbox: Customize: WeekCal -> Plugins Text -> [ ] Only first line of text

--- a/locale.d/fa.po
+++ b/locale.d/fa.po
@@ -3155,6 +3155,10 @@ msgid "Swap with Plugins Text"
 msgstr ""
 "جابجایی با متن افزونه‌ها"
 
+msgid "Only first line of text"
+msgstr ""
+"فقط خط اول متن"
+
 
 msgid "Season Progress Bar"
 msgstr ""
