ReadOnlyTextView: right-click: add "Copy URL" menu item. applied to Plugins Text widget

--- a/locale.d/fa.po
+++ b/locale.d/fa.po
@@ -1432,6 +1432,11 @@ msgid "Copy _Time"
 msgstr ""
 "کپی _زمان"
 
+msgid "Copy _URL"
+msgstr ""
+"کپی _URL"
+
+
 msgid "Copy to {title}"
 msgstr ""
 "کپی به {title}"
